--- a/GetElByID/Getelbyid-exercise.html
+++ b/GetElByID/Getelbyid-exercise.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Gallery.css">
+    <link rel="stylesheet" href="Getelbyid-exercise.css">
 </head>
 <body>
     <div class="slideshow" style="padding: 0; width: 100%;">
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <script type="text/javascript" src="Gallery.js"></script>
+      <script type="text/javascript" src="Getelbyid-exercise.js"></script>
   
 </body>
 </html>
