--- a/GetElByID/Getelbyid-exercise.html
+++ b/GetElByID/Getelbyid-exercise.html
@@ -8,21 +8,31 @@
     <link rel="stylesheet" href="Getelbyid-exercise.css">
 </head>
 <body>
+  <h1>What if capybaras replaced humans?</h1>
+
+  <p>Capybaras are known for their intelligence, social skills, and adaptability, 
+    which are qualities that humans value highly. In addition, capybaras are herbivores 
+    and do not have the same negative impact on the environment as humans do. <br>
+    If capybaras were to become the dominant species, it is possible that they would 
+    create a more sustainable and harmonious world. They may prioritize conservation 
+    efforts and focus on maintaining a healthy ecosystem. Capybaras are also known for 
+    their peaceful nature and ability to live cooperatively in large groups, which could 
+    lead to a more peaceful and equitable society.</p>
     <div class="slideshow" style="padding: 0; width: 100%;">
         <div class="slide">
-          <img src="assets/1.jpg" style="width:100%">
+          <img src="assets/1.jpg">
         </div>
         <div class="slide">
-          <img src="assets/2.jpg" style="width:100%">
+          <img src="assets/2.jpg">
         </div>
         <div class="slide">
-          <img src="assets/3.jpg" style="width:100%">
+          <img src="assets/3.jpg">
         </div>
         <div class="slide">
-          <img src="assets/4.jpg" style="width:100%">
+          <img src="assets/4.jpg">
         </div>
         <div class="slide">
-          <img src="assets/5.jpg" style="width:100%">
+          <img src="assets/5.jpg">
         </div>
 
         <div class="arrows">
