Added two slides

--- a/GetElByID/Getelbyid-exercise.html
+++ b/GetElByID/Getelbyid-exercise.html
@@ -34,6 +34,12 @@
         <div class="slide">
           <img src="assets/5.jpg">
         </div>
+        <div class="slide">
+          <img src="assets/6.jpg">
+        </div>
+        <div class="slide">
+          <img src="assets/7.jpg">
+        </div>
 
         <div class="arrows">
               <div class="indietro">
