--- a/my_final_project_agostino/Index.html
+++ b/my_final_project_agostino/Index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="endgame-container">
-        <img src="./assets/Title.png"/>
+        <img id="title" src="./assets/Title.png"/>
         <p id="result"></p>
         <img id="start" src="./assets/start-button.png"/>
         <div id="highscore-controls-container">
